--- a/index.html
+++ b/index.html
@@ -43,8 +43,15 @@
         <p class="servico-paragrafo">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem suscipit, labore obcaecati illo nam nesciunt? Magni facere velit dicta, totam aliquam quos aperiam earum hic temporibus consequatur dolore eligendi reiciendis?</p>
     </section>
     <section class="contato">
-        <form action="contato.php">
-            <h2>contato</h2>
+        <h1>Formulário de contato</h1>
+        <form method="post">
+            <label for="nome">Nome:</label>
+            <input type="text" name="nome" required><br>
+            <label for="email">E-mail:</label>
+            <input type="email" name="email" required><br>
+            <label for="telefone">Telefone:</label>
+            <input type="tel" name="telefone" required><br>
+            <input type="submit" value="Enviar">
         </form>
     </section>
     <footer class="rodape">
