--- a/flexgrid.html
+++ b/flexgrid.html
@@ -14,26 +14,45 @@
             " href="#">redes sociais</a>
             <menu class="redes">
                 <a class="icone" href="#"><img class="iicone" src="logo-home.jpg" alt="atalho home"></a>
-                <a class="icone" href="https://www.instagram.com/rafael.bonenberger"><img class="iicone" src="logo-instagram.jpg" alt="atalho instagram"></a>
-                <a href="wa.me/5554991769792" class="icone"><img class="iicone" src="logo-wp.jpeg" alt="atalho whatsapp"></a>
+                <a class="icone" href="https://www.instagram.com/rafael.bonenberger" target="_blank"><img class="iicone" src="logo-instagram.jpg" alt="atalho instagram"></a>
+                <a class="icone" href="https://api.whatsapp.com/send/?phone=5554991769792&text&type=phone_number&app_absent=0" target="_blank"><img class="iicone" src="logo-wp.jpeg" alt="atalho whatsapp"></a>
             </menu>
         </div>
         <div class="item um">
-            <h1>cabeçalho</h1>
+            <h1><img class="imglogo" src="Imóveisrdsf.png" alt="logo imóveis pf"></h1>
             <menu class="nav">
-                <li>home</li>
-                <li>empreendimentos</li>
-                <li>contato</li>
-                <li>avaliações</li>
+                <li><a class="limenu" href="#">home</a></li>
+                <li><a class="limenu" href="#">empreendimentos</a></li>
+                <li><a class="limenu" href="#">contato</a></li>
+                <li><a class="limenu" href="#">avaliações</a></li>
             </menu>
         </div>
-        <div class="item dois">principal</div>
-        <div class="item tres">secundário</div>
+        <div class="item dois">
+            <section class="empre" id="home">
+                <h1 class="empre-principal-titulo">Principais empreendimentos</h1>
+                <div class="empre-principal">
+                    <div class="empre-principal-i1">
+                        <h2>artsy</h2>
+                        <img class="empre-imagens" src="artsy.png" alt="artsy">
+                        <p class="empre-para">empreendimento de alto padrão localizado no centro de passo fundo</p>
+                    </div>
+                    <div class="empre-principal-i2">
+                        <h2>casa alba</h2>
+                        <img class="empre-imagens" src="casa-alba.jpg" alt="casa alba">
+                        <p class="empre-para">muito conforto com uma bela vista do bairro cidade nova</p>
+                    </div>
+                    <div class="empre-principal-i3">
+                        <h2>dreams</h2>
+                        <img class="empre-imagens" src="dreams.jpg" alt="dreams">
+                        <p class="empre-para">melhor custo-benefício em apartamentos mobiliados no bairro que mais cresce na cidade</p>
+                    </div>
+                </div>
+            </section>
+        </div>
         <div class="item quatro"><footer><p class="prod">site desenvolvido por rafael bonenberger</p></footer></div>
-        <div class="flut"><img class="iflut" src="logo-wp.jpeg" alt="contato de whatsapp"></div>
+        <div class="flut"><a href="https://api.whatsapp.com/send/?phone=5554991769792&text&type=phone_number&app_absent=0"><img class="iflut" src="logo-wp.jpeg" alt="contato de whatsapp"></a></div>
     </div>
     <script>
-        window.document.write()
         
     </script>
 </body>
